# mavlog2csv

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: improved_mavlog2csv.py  mavlog2csv.py  sync_logs.py
src/mavlog2csv/: __init__.py  converter.py  sync.py
tests/: test_improvements.py  test_sync_logs.py
