[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavlog2csv"
version = "0.1.0"
description = "Tools for processing and synchronizing ArduPilot DataFlash logs"
readme = "README.md"
authors = [{ name = "Yonatan Chiel" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pymavlink",
]

[project.scripts]
mavlog2csv = "mavlog2csv.converter:main"
mavlog-sync = "mavlog2csv.sync:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[tool.isort]
profile = "black"
line_length = 95

[tool.black]
line-length = 95
